[gd_scene load_steps=7 format=4 uid="uid://beuliwy43hvui"]

[ext_resource type="Script" uid="uid://bi2ceodteav2l" path="res://Scripts/Buildings/building.gd" id="1_g1joy"]
[ext_resource type="Texture2D" uid="uid://ctpa7se7lkdkc" path="res://Assets/Buildings/Textures/colormap.png" id="1_o76hs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1rj2h"]
resource_name = "colormap"
cull_mode = 2
albedo_texture = ExtResource("1_o76hs")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_ml63t"]
_surfaces = [{
"aabb": AABB(-1, 0, -1.1, 2, 1.98125, 2.2),
"format": 34896613377,
"index_count": 966,
"index_data": PackedByteArray("AAABAAIAAgABAAMAAgAEAAAABAACAAUAAgADAAYABQACAAYABwADAAEACAAHAAEABgAIAAUAAwAHAAkACQAHAAgACQAKAAMAAwAKAAsACwAKAAkACwAGAAMACQAMAAsABgALAAwACAAMAAkADAAIAAYADQAFAAgACAABAA0ADgANAAEABQANAA4AAQAAAA4ADgAPAAUAAAAOAA8ABQAPAAQABAAPAA4ADgAAAAQADwAEAAAAEAAOAAAAEQAEAA8AAAAEABEADwASABEAAAATABAAEQATAAAAEQASABQAEAATABUAEwARABUAFQAWABAAFwAWABUAFQAYABcAGQAVABEAGAAVABkAFAAZABEAGQAaABgAGgAZABQAFAAbABoAHAAdAB4AHwAdABwAHgAdAB8AHAAgAB8AHwAgACEAHgAiABwAHwAjAB4AIQAjAB8AIwAhACQAJAAlACMAHgAjACUAJQAkACYAJQAnAB4AJgAnACUAIgAeACcAJwAmACIAKAAiACEAIQApACgAKQAhACoAKgArACkALAArACoAKQArACwAKgAtACwALgAoACkALwAoAC4AMAAuACkALAAwACkAMQAoAC8AKAAxACIALgAyAC8AMQAvADIAMwAuADAAMwAyAC4ANAAwACwAMAA0ADMALAA1ADQAMwA0ADUANgA1ACwANQA2ADMALQA2ACwANwAyADMAMgA3ADEAOAAzADYAMwA4ADcALQA5ADYANgA5ADgAMQA3ADoAOAA6ADcAOgA7ADEAMQA7ACIAPAA7ADoAOgA9ADwAOAA9ADoAOwA8AD4APgA8AD0AOwA+ACIAOAA/AD0APQA/AD4AQAA4ADkAOABBAD8AOABAAEEAQgA+AD8APgBCACIAQgA/AEEAOQBDAEAAQQBAAEMARABDADkAQwBEAEEALQBEADkAIgBCAEUARQAtACIARQBCAEEALQBFAEQAQQBEAEUARgBHAEgASABJAEYASgBHAEYASABHAEoARgBLAEoASgBMAEgASgBLAE0ATQBMAEoATgBPAFAAUABRAE4AUgBPAE4AUABPAFIATgBTAFIAUgBUAFAAUgBTAFUAVQBUAFIAVgBXAFgAVwBWAFkAWQBaAFcAWwBZAFYAWABcAFYAVgBcAFsAXABYAF0AXQBbAFwAXgBfAGAAXwBeAGEAYQBiAF8AYwBhAF4AYABkAF4AXgBkAGMAZABgAGUAZQBjAGQAZgBnAGgAaABnAGkAaQBnAGYAZgBqAGkAaQBqAGsAawBsAGkAaQBsAGgAbQBrAGoAagBmAG0AawBtAG4AbgBsAGsAbQBmAG8AbgBtAHAAbQBvAHAAbABuAHEAcABxAG4AbABxAHIAcwBvAGYAdABzAGYAaAB0AGYAbwBzAHUAdQBzAHQAdgB0AGgAbAB3AGgAbAByAHcAaAB4AHYAdwB4AGgAeQB2AHgAeAB3AHkAdAB2AHkAeQB3AHIAdAB6AHUAeQB6AHQAeQB7AHoAdQB6AHsAcgB8AHkAdQB9AG8AbwB9AH4AfQB1AH8AfgB9AH8AfgBwAG8AfABwAH4AfACAAHAAcACAAIEAgQCAAHwAgQBxAHAAcQCBAHIAfAByAIEAfAB+AIIAfwCCAH4AgwB5AHwAeQCDAHsAfACCAIQAfACEAIMAhQCDAIQAewCDAIUAhgCEAIIAhACGAIUAhwCGAIIAhwCCAH8AiACFAIYAhgCHAIgAewCFAIgAfwCJAIcAhwCJAIoAigCJAH8AigCIAIcAiwB7AIgAiACKAIsAfwCLAIoAewCLAHUAiwB/AHUAjACNAI4AjACNAI4AjwCNAIwAjACQAI8AkQCQAIwAjACOAJEAkgCPAJAAkwCNAI8AjwCSAJMAjgCNAJMAjgCNAJMAlACQAJEAkACUAJIAlQCRAI4AkQCVAJQAkgCUAJYAlgCUAJUAlgCTAJIAjgCXAJUAlQCXAJYAkwCXAI4AkwCXAI4AlgCXAJMAlgCXAJMAmACZAJoAmACZAJoAmwCZAJgAmACcAJsAnQCcAJgAmACaAJ0AngCbAJwAnwCZAJsAmwCeAJ8AmgCZAJ8AmgCZAJ8AoACcAJ0AnACgAJ4AoQCdAJoAnQChAKAAngCgAKIAogCgAKEAogCfAJ4AmgCjAKEAoQCjAKIAnwCjAJoAnwCjAJoAogCjAJ8AogCjAJ8ApAClAKYApAClAKYApwClAKQApACoAKcAqQCoAKQApACmAKkAqgCnAKgAqwClAKcApwCqAKsApgClAKsApgClAKsArACoAKkAqACsAKoArQCpAKYAqQCtAKwAqgCsAK4ArgCsAK0ArgCrAKoApgCvAK0ArQCvAK4AqwCvAKYAqwCvAKYArgCvAKsArgCvAKsAsACxALIAsACxALIAswCxALAAsAC0ALMAtQC0ALAAsACyALUAtgCzALQAtwCxALMAswC2ALcAsgCxALcAsgCxALcAuAC0ALUAtAC4ALYAuQC1ALIAtQC5ALgAtgC4ALoAugC4ALkAugC3ALYAsgC7ALkAuQC7ALoAtwC7ALIAtwC7ALIAugC7ALcAugC7ALcA"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 188,
"vertex_data": PackedByteArray("/48PXBbdAAD/jw9c5+IAAP9vD1zn4gAA8HYNVefiAAD/bw9cFt0AAP9vdBvn4gAA8HZ2IufiAAAOiQ1V5+IAAA6JdiLn4gAADokNVf/fAADwdg1V/98AAPB2diL/3wAADol2Iv/fAAD/j3Qb5+IAAP+PdBsW3QAA/290GxbdAAD/j3QbuegAAP9vD1y56AAA/290G7noAAD/jw9cuegAAP8/dBu56AAA/782bLnoAAD/v3QbuegAAP+/dBtcdAAA/782bFx0AAD/PzZsuegAAP8/NmxcdAAA/z90G1x0AAD/PwAAXHQAAP8/AAAAAAAA/z90GwAAAAD/vwAAAAAAAP+/AABcdAAA/790G1x0AAD/P3QbXHQAAP+/dBsAAAAA/782bFx0AAD/vzZsAAAAAP8/NmxcdAAA/z82bAAAAADMnHQbuegAAP+/dBu56AAA/78AAFx0AAD/vwAAuegAAJipAAC56AAA/z8AAFx0AADMnLoNuegAAMycdBuK7gAAmKm6DbnoAABllnQbXPQAAMycug2K7gAAMqO6Df//AACYqboNLfoAAJipAAAt+gAAMqMAAP//AABllroNXPQAAMxcug3//wAAzFwAAP//AACZaboNXPQAAJlpdBtc9AAAMmN0G4ruAAAyY7oNiu4AADJjdBu56AAAMmO6DbnoAABmVroNLfoAAGZWug256AAA/z90G7noAABmVgAALfoAAGZWAAC56AAA/z8AALnoAAD/PwAAuegAAAAAAAC56AAAAAB0G7noAAD/P3QbuegAAAAAAABcdAAA/z8AAFx0AAAAAHQbXHQAAP8/dBtcdAAA/78AAFx0AAD//wAAXHQAAP//dBtcdAAA/790G1x0AAD+/wAAuegAAP+/AAC56AAA/v90G7noAAD/v3QbuegAAAAANmxcdAAA/z82bFx0AAD/PzZsuegAAAAAdBtcdAAA/z90G1x0AAAAAHQbuegAAAAANmy56AAA/z90G7noAAD+/zZsuegAAP+/Nmy56AAA/782bFx0AAD+/3QbuegAAP+/dBu56AAA//90G1x0AAD//zZsXHQAAP+/dBtcdAAA/7/3vLnoAAD/vzZsuegAAP+vNmy56AAA/782bFx0AAD/v/e8XHQAAP8/97xcdAAA/z82bFx0AAD/P/e8uegAAP8/Nmy56AAA/0/RrLnoAAD/T3iDuegAAP9PNmy56AAAyFM2bC36AAD/r9GsuegAAP+veIO56AAA/6/RrBbdAAD/r3iDvPYAADasNmwt+gAA/682bLz2AAA2rHiDLfoAAP+veIMW3QAAbah4gxbdAADIU3iDLfoAAP9P0awW3QAA/094gxbdAACRVyylFt0AAP9PeIO89gAA/082bLz2AACRV3iDFt0AAG2oeINL8wAAkVd4g0vzAABtqPdzS/MAAJFX93NL8wAAkVf3c0TXAABtqPdzRNcAAJFXLKVE1wAAbagspUTXAABtqCylFt0AAP7/ZKOKrgAA//82bFx0AAD+/zZsuegAAP//BnMNbwAA/v89r4quAAD+/wZzCO4AAP+/BnMMbwAA/782bFx0AAD/vz2viq4AAP+/BnMI7gAA/79ko4quAAD/vzZsuegAAAAAZKOKrgAAAAA2bLnoAAAAADZsXHQAAAAABnMI7gAAAAA9r4quAAAAAAZzDW8AAP8/BnMI7gAA/z82bLnoAAD/Pz2viq4AAP8/BnMMbwAA/z9ko4quAAD/PzZsXHQAAP9/JfRcdAAA/z/3vFx0AAD/v/e8XHQAACg6x8NcdAAA/3///1x0AADWxcfDXHQAACg6x8O56AAA/z/3vLnoAAD/f///uegAANbFx8O56AAA/38l9LnoAAD/v/e8uegAAP9/ZKMAAAAA/z82bAAAAAD/vzZsAAAAACg6BnMAAAAA/389rwAAAADWxQZzAAAAACg6BnNcdAAA/z82bFx0AAD/fz2vXHQAANbFBnNcdAAA/39ko1x0AAD/vzZsXHQAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_g4r2k"]
resource_name = "building-sample-house-c_building-sample-house-c"
_surfaces = [{
"aabb": AABB(-1, 0, -1.1, 2, 1.98125, 2.2),
"attribute_data": PackedByteArray("/5dlxv+XZcb/l2XG/5dlxv+X88v/l/PL/5cK9P+XCvT/l5j5/5eY+f+XmPn/l5j5/5dlxv+XZcb/l5j5/5eY+f+XmPn/l5j5/5dlxv+XZcb/lwr0/5cK9P+X88v/l/PL/5fzy/+X88v/l/PL/5fzy/+XZcb/l5j5/5eY+f+XZcb/l/PL/5cK9P+XCvT/l/PL/5cK9P+XCvT/lwr0/5cK9P+XCvT/l/PL/5dlxv+X88v/l5j5/5dlxv+XmPn/lwr0/9fL7P/Xy+z/1zLT/9cy0//Xy+z/18vs/9fL7P/Xy+z/1zLT/9cy0//Xy+z/18vs/9cy0//Xy+z/18vs/9cy0//Xy+z/18vs/9cy0//XMtP/18vs/9fL7P/Xy+z/18vs/9cy0//XMtP/18vs/9fL7P/XMtP/18vs/9fL7P/XMtP/18vs/9fL7P/XMtP/1zLT/9fL7P/Xy+z/18vs/9fL7P/XMtP/1zLT/9fL7P/Xy+z/1zLT/9fL7P/Xy+z/1zLT/9eY+f/XmPn/12XG/9dlxv/XZcb/15j5/9eY+f/X/9//1//f/9dlxv/X/9//1//f/9eY+f/XmPn/12XG/9f/3//X/9//12XG/9eY+f/XmPn/1//f/9f/3//X/9//1//f/9dlxv/XZcb/12XG/9dlxv/X/9//1//f/9eY+f/XmPn/1//f/9f/3//X/9//15j5/9eY+f/XZcb/1//f/9dlxv/XZcb/12XG/9eY+f/XmPn/15j5/9eY+f/XmPn/15j5/9eY+f/XmPn/15j5/9eY+f/XmPn/15j5/9f/3//X/9//1//f/9f/3//X/9//1//f/9f/3//X/9//1//f/9f/3//X/9//1//f/9eY+f/XmPn/1//f/9f/3//X/9//1//f/9dlxv/XZcb/12XG/9dlxv/X/9//1//f/9f/3//X/9//15j5/9eY+f/XZcb/12XG/9dlxv/XZcb/12XG/9dlxv/XZcb/12XG/9dlxv/XZcb/9zLT//cy0//3MtP/9zLT//fL7P/3y+z/9zLT//cy0//3y+z/98vs//cy0//3MtP/9zLT//cy0//3y+z/98vs//cy0//3MtP/9zLT//cy0//3y+z/98vs//cy0//3MtP/98vs//fL7P/3MtP/9zLT//cy0//3MtP/98vs//fL7P/3MtP/9zLT//cy0//3MtP/98vs//fL7P/3MtP/9zLT//fL7P/3y+z/9zLT//cy0//3MtP/9zLT//fL7P/3y+z/9zLT//fL7P/3y+z/92zl//dR2P/3Udj/9zLT//ds5f/3y+z/98vs//fL7P/3y+z/98vs//fL7P/3y+z/98vs//fL7P/3y+z/98vs//fL7P/3Vur/91bq//dW6v/3Vur/91HY//dR2P/3Udj/91HY//cy0//3y+z/98vs//cy0//3bOX/98vs//fL7P/3bOX/92zl//ds5f/3y+z/98vs//dR2P/3bOX/92zl//e92v/3vdr/91HY//ds5f/3bOX/92zl//dW6v/3Vur/92zl//cy0//3MtP/98vs//fL7P/3bOX/92zl//ds5f/3bOX/92zl//ds5f/3bOX/92zl//ds5f/3bOX/92zl//ds5f/3Vur/973a//e92v/3bOX/91bq//ds5f/3y+z/98vs//ds5f/3bOX/91HY//dR2P/3bOX/92zl//ds5f/3bOX/91HY//dR2P/3vdr/973a//dW6v/3bOX/91bq//ds5f/3bOX/98vs//fL7P/3bOX/973a//e92v/3vdr/973a//cy0//3MtP/9zLT//cy0//3bOX/92zl//fL7P/3y+z/98vs//fL7P/3MtP/9zLT//cy0//3y+z/98vs//cy0//3y+z/98vs//fL7P/3y+z/98vs//fL7P/3MtP/98vs//fL7P/3MtP/98vs//fL7P/3y+z/98vs//fL7P/3y+z/9zLT//fL7P/3y+z/9zLT//fL7P/3y+z/98vs//fL7P/3y+z/98vs//cy0//3y+z/98vs//cy0//3y+z/98vs//fL7P/3y+z/98vs//fL7P/3MtP/98vs//fL7P/3MtP/98vs//fL7P/3y+z/98vs//fL7P/3y+z/9zLT//fL7P/3y+z/9zLT//fL7P/3y+z/98vs//fL7P/3y+z/98vs//cy0//3y+z/98vs//cy0//3y+z/98vs//fL7P/3y+z/98vs//fL7P/3MtP/98vs//fL7P/3MtP/98vs//fL7P/3y+z/98vs//fL7P/3y+z/92XG//dlxv/3mPn/95j5//dlxv/3mPn/95j5//ej0P/3o9D/92XG//eY+f/3mPn/92XG//dlxv/3Zcb/92XG//eY+f/3mPn/92XG//dlxv/3o9D/96PQ//eY+f/3mPn/95j5//eY+f/3o9D/96PQ//ej0P/3o9D/96PQ//ej0P+3vZr/t1aq/7dWqv+3vZr/t6OQ/7eYuf+3mLn/t6OQ/xdk9P8XZPT/F2XG/xdlxv8XZPT/F5j5/xdyz/8XZcb/F2T0/xeY+f8XZcb/F2XG/xdk9P8XZPT/F5j5/xeY+f8XZPT/F2T0/xdk9P8XmPn/F3LP/xdlxv8XZPT/F5j5/xdk9P8XZPT/F5j5/xeY+f8XZPT/F2T0/xdlxv8XZcb/F2T0/xeY+f8Xcs//F2XG/xdk9P8XmPn/F2XG/xdlxv8XZPT/F2T0/xeY+f8XmPn/F2T0/xdk9P8XZPT/F5j5/xdyz/8XZcb/F2T0/xeY+f8XZPT/F2T0/xeY+f8XmPn/F2T0/xdk9P8XZcb/F2XG/xdk9P8XmPn/F3LP/xdlxv8XZPT/F5j5/xdlxv8XZcb/F2T0/xdk9P8XmPn/F5j5/xdk9P8XZPT/F2T0/xeY+f8Xcs//F2XG/xdk9P8XmPn/F2T0/xdk9P8XmPn/F5j5/xdk9P8XZPT/F2XG/xdlxv8XZPT/F5j5/xdyz/8XZcb/F2T0/xeY+f8XZcb/F2XG/xdk9P8XZPT/F5j5/xeY+f8XZPT/F2T0/xdk9P8XmPn/F3LP/xdlxv8XZPT/F5j5/xdk9P8XZPT/F5j5/xeY+Q=="),
"format": 34896613399,
"index_count": 966,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAAFAAYABgAHAAQACAAJAAoACgALAAgADAANAA4ADgAPAAwAEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHgAfABwAIAAhACIAIgAjACAAJAAlACYAJgAnACQAKAApACoAKQArACoAKAAqACwALQAqACsALAAuACgALQArAC8ALwAoAC4ALgAtAC8AMAAxADIAMgAzADAANAA1ADYANgA3ADQAOAA5ADoAOgA7ADgAPAA9AD4APgA/ADwAQABBAEIAQgBDAEAARABFAEYARgBHAEQASABJAEoASgBLAEgATABNAE4ATgBPAEwAUABRAFIAUgBTAFAAVABVAFYAVgBXAFQAWABZAFoAWgBbAFgAXABdAF4AXgBfAFwAYABhAGIAYgBjAGAAZABlAGYAZgBnAGQAZwBoAGQAaABpAGQAagBrAGwAbABtAGoAbgBvAHAAcABxAG4AcgBzAHQAdAB1AHIAdgB3AHgAeAB5AHYAegB7AHwAfAB9AHoAfgB/AIAAgACBAH4AggCDAIQAhACFAIIAhQCGAIIAhQCHAIYAiACJAIoAigCLAIgAjACNAI4AjgCPAJAAkACRAI4AkQCMAI4AkQCSAIwAkQCTAJIAkwCUAJIAkQCVAJMAlgCXAJgAmACZAJYAmACaAJkAmwCaAJgAmACcAJsAnACdAJsAnACeAJ0AnACfAJ4AnACgAJ8AnAChAKAAogCjAKQApAClAKIApgCnAKgAqACpAKYAqgCrAKwArACtAKoArgCvALAAsACxAK4AsgCzALQAtAC1ALIAtAC2ALUAtgC0ALcAtgC4ALUAuAC5ALUAuQC6ALUAuAC7ALkAvAC9AL4AvgC/ALwAwADBAMIAwgDDAMAAxADFAMYAxgDHAMQAyADJAMoAygDLAMgAzADNAM4AzgDPAMwA0ADRANIA0gDTANAA1ADVANYA1gDXANQA2ADZANoA2gDbANgA3ADdAN4A3gDfANwA4ADhAOIA4gDjAOAA5ADlAOYA5gDnAOQA6ADpAOoA6gDrAOgA7ADtAO4A7gDvAOwA7wDwAOwA8ADxAOwA8gDsAPEA8gDxAPMA9ADyAPMA8wD1APQA9gD3APgA+AD5APoA+gD7APgA+wD2APgA+wD8APYA+wD9APwA/QD+APwA+wD/AP0AAAEBAQIBAgEDAQABBAEFAQYBBgEHAQQBCAEJAQoBCgELAQgBDAENAQ4BDgEPAQwBEAERARIBEgETARABFAEVARYBFgEXARQBFwEYARQBGQEUARgBGgEZARgBGAEbARoBHAEdAR4BHgEfARwBIAEhASIBIgEjASABJAElASYBJgEnASQBJgEoAScBJgEpASgBKQEmASoBKgErASkBKgEsASsBKgEtASwBKgEuAS0BKgEvAS4BMAExATIBMgEzATABMwE0ATABMwE1ATQBNgE3ATgBOAE5ATYBOgE7ATwBPAE9AToBPgE/AUABQAFBAT4BQgFDAUQBRAFFAUIBRAFGAUUBRgFHAUUBSAFJAUoBSgFLAUgBTAFNAU4BTgFPAUwBUAFRAVIBUgFTAVABVAFVAVYBVgFXAVQBWAFZAVoBWgFbAVgBXAFdAV4BXwFgAWEBYgFjAWQBZAFlAWIBZgFnAWgBaQFqAWsBbAFtAW4BbgFvAWwBcAFxAXIBcwF0AXUBdgF3AXgBeAF5AXYBegF7AXwBfQF+AX8BgAGBAYIBggGDAYABhAGFAYYBhwGIAYkBigGLAYwBjAGNAYoBjgGPAZABkQGSAZMBlAGVAZYBlgGXAZQBmAGZAZoBmwGcAZ0BngGfAaABoAGhAZ4BogGjAaQBpQGmAacBqAGpAaoBqgGrAagBrAGtAa4BrgGvAawBsAGxAbIBsgGzAbABswG0AbABtQGwAbQBtgG1AbQBtAG3AbYBuAG5AboBugG7AbgBvAG9Ab4BvgG/AbwBwAHBAcIBwgHDAcABxAHFAcYBxgHHAcQByAHJAcoBygHLAcgBzAHNAc4BzgHPAcwB0AHRAdIB0gHTAdAB1AHVAdYB1gHXAdQB2AHZAdoB2gHbAdgB3AHbAdoB2gHdAdwB3gHfAeAB4AHhAd4B4gHjAeQB5AHlAeIB5gHnAegB6AHpAeYB6gHpAegB6AHrAeoB7AHtAe4B7gHvAewB8AHxAfIB8gHzAfAB9AH1AfYB9gH3AfQB+AH3AfYB9gH5AfgB+gH7AfwB/AH9AfoB/gH/AQACAAIBAv4BAgIDAgQCBAIFAgICBgIFAgQCBAIHAgYCCAIJAgoCCgILAggCDAINAg4CDgIPAgwCEAIRAhICEgITAhACFAITAhICEgIVAhQCFgIXAhgCGAIZAhYCGgIbAhwCHAIdAhoCHgIfAiACIAIhAh4CIgIhAiACIAIjAiICJAIlAiYCJgInAiQCKAIpAioCKgIrAigCLAItAi4CLgIvAiwCMAIvAi4CLgIxAjACMgIzAjQCNAI1AjICNgI3AjgCOAI5AjYCOgI7AjwCPAI9AjoCPgI9AjwCPAI/Aj4CQAJBAkICQgJDAkAC"),
"material": SubResource("StandardMaterial3D_1rj2h"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 580,
"vertex_data": PackedByteArray("/48PXBbd////jw9c5+L///9vD1zn4v///28PXBbd///wdg1V5+L/v/B2DVX/3/+/8HZ2Iv/f/7/wdnYi5+L/v/9vdBvn4v+//490G+fi/7//j3QbFt3/v/9vdBsW3f+//48PXOfi/7//jw9cFt3/v/+PdBsW3f+//490G+fi/7//b3Qb5+L/v/9vdBsW3f+//28PXBbd/7//bw9c5+L/vw6JdiLn4v+/Dol2Iv/f/78OiQ1V/9//vw6JDVXn4v+/8HYNVefi/78OiQ1V5+L/vw6JDVX/3/+/8HYNVf/f/7//bw9cFt3///9vdBsW3f///490Gxbd////jw9cFt3//w6JDVX/3wCADol2Iv/fAIDwdnYi/98AgPB2DVX/3wCADol2Iv/f//8OiXYi5+L///B2diLn4v//8HZ2Iv/f//8OiXYi5+IAgA6JDVXn4gCA/48PXOfiAIDwdg1V5+IAgP+PdBvn4gCA/28PXOfiAID/b3Qb5+IAgPB2diLn4gCA/z8AAFx0/7//PwAAAAD/v/8/dBsAAP+//z90G1x0/7//PwAAXHT/v/+/AABcdP+//78AAAAA/7//PwAAAAD/v/+/dBtcdP+//790GwAA/7//vwAAAAD/v/+/AABcdP+//z90GwAA////PwAAAAD///+/AAAAAP///790GwAA////PwAAuegAgAAAAAC56ACAAAB0G7noAID/P3QbuegAgP8/AAC56FTV/z8AAFx0VNUAAAAAXHRU1QAAAAC56FTV/z90G1x0//8AAHQbXHT//wAAAABcdP///z8AAFx0//8AAHQbuej/vwAAAAC56P+/AAAAAFx0/78AAHQbXHT/v/+/AABcdP////8AAFx0/////3QbXHT///+/dBtcdP///78AAFx0VNX/vwAAuehU1f7/AAC56FTV//8AAFx0VNX/v3QbuegAgP7/dBu56ACA/v8AALnoAID/vwAAuegAgP//dBtcdP+///8AAFx0/7/+/wAAuej/v/7/dBu56P+//z8AALno/7//PwAAXHT/v/8/dBtcdP+//z90G7no/7//v3QbuegAgP+/AAC56ACAmKkAALnoAICYqboNuegAgMycug256ACAzJx0G7noAICYqboNLfr/r5ipug256P+/mKkAALno/7+YqQAALfr/r2WWdBtc9P+PZZa6DVz0/4+ZaboNXPT/j5lpdBtc9P+PZlYAAC36/69mVgAAuej/v2ZWug256P+/Zla6DS36/68yY7oNiu7/rzJjug256P+/MmN0G7no/78yY3Qbiu7/r8ycdBuK7v+vzJx0G7no/7/MnLoNuej/v8ycug2K7v+vMqMAAP///4/MXAAA////j8xcug3///+PMqO6Df///49mVroNuegAgGZWAAC56ACA/z8AALnoAID/P3QbuegAgDJjug256ACAMmN0G7noAID/v3Qbuej/v/+/dBtcdP+//78AAFx0/7//vwAAuej/vzKjAAD///+/mKkAAC36/7+YqQAAuej/v/+/AAC56P+//78AAFx0/7//PwAAXHT/v8xcAAD///+/ZlYAALno/79mVgAALfr/v/8/AAC56P+/mKm6Dbno//+YqboNLfr//zKjug3/////zJy6Dbno///MnLoNiu7//2WWug1c9P//zFy6Df////+ZaboNXPT//zJjug2K7v//MmO6Dbno//9mVroNuej//2ZWug0t+v//zFwAAP///49mVgAALfr/r2ZWug0t+v+vzFy6Df///4+ZaboNXPT/jzJjug2K7v+vMmN0G4ru/6+ZaXQbXPT/j2WWdBtc9P+PzJx0G4ru/6/MnLoNiu7/r2WWug1c9P+PMqO6Df///4+YqboNLfr/r5ipAAAt+v+vMqMAAP///4//v3QbXHT///+/dBu56P//zJx0G7no////P3QbXHT//2WWdBtc9P//zJx0G4ru//+ZaXQbXPT//zJjdBu56P///z90G7no//8yY3Qbiu7///+/NmwAAP///782bFx0////PzZsXHT///8/NmwAAP///z90GwAA////v3QbAAD///+/NmwAAP///z82bAAA////P3QbXHT/v/8/dBsAAP+//z82bAAA/7//PzZsXHT/v/+/NmxcdP+//782bAAA/7//v3QbAAD/v/+/dBtcdP+/AAA2bFx0VNX/PzZsXHRU1f8/Nmy56FTVAAA2bLnoVNUAAHQbuej/vwAAdBtcdP+/AAA2bFx0/78AADZsuej/v/8/dBu56ACAAAB0G7noAIAAADZsuegAgP8/Nmy56ACA/z82bFx0//8AADZsXHT//wAAdBtcdP///z90G1x0///+/zZsuehU1f+/Nmy56FTV/782bFx0VNX//zZsXHRU1f//dBtcdP+//v90G7no/7/+/zZsuej/v///NmxcdP+//790G1x0/////3QbXHT/////NmxcdP///782bFx0////vzZsuegAgP7/Nmy56ACA/v90G7noAID/v3QbuegAgP+/97y56ACA/782bLnoAID/rzZsuegAgP+veIO56ACA/6/RrLnoAID/T9GsuegAgP8/97y56ACA/094g7noAID/PzZsuegAgP9PNmy56ACANqw2bC36/7//rzZsvPb/v/+vNmy56P+//782bLno/7//vzZsXHT/v/8/NmxcdP+/yFM2bC36/7//TzZsuej/v/9PNmy89v+//z82bLno/79tqPdzRNf//22o93NL8///kVf3c0vz//+RV/dzRNf///9P0ay56P+//6/RrLno/7//r9GsFt3/v/9P0awW3f+//z/3vFx0////PzZsXHT///+/NmxcdP///7/3vFx0//82rHiDLfr/jzasNmwt+v+PyFM2bC36/4/IU3iDLfr/j/+veIO89v+v/694g7no/7//rzZsuej/v/+vNmy89v+v/6/RrBbdAID/r3iDFt0AgG2oeIMW3QCAbagspRbdAICRVyylFt0AgP9P0awW3QCA/094gxbdAICRV3iDFt0AgJFXeINL8///kVf3c0vz//9tqPdzS/P//22oeINL8////7/3vLno/7//v/e8XHT/v/+/NmxcdP+//782bLno/7//r3iDuej///+veIO89v//Nqx4gy36////r3iDFt3//22oeIMW3f//bah4g0vz///IU3iDLfr//5FXeINL8///kVd4gxbd////T3iDFt3///9PeIO56P///094g7z2//9tqPdzRNf/v22oLKVE1/+/bagspRbd/79tqHiDFt3/v22o93NL8/+/bah4g0vz/7//TzZsvPb/r/9PNmy56P+//094g7no/7//T3iDvPb/r/9P0ay56P+//0/RrBbd/7//T3iDFt3/v/9PeIO56P+//694g7no/7//r3iDFt3/v/+v0awW3f+//6/RrLno/7+RVyylFt3/v5FXLKVE1/+/kVf3c0TX/7+RV3iDFt3/v5FX93NL8/+/kVd4g0vz/7/IU3iDLfr/j8hTNmwt+v+P/082bLz2/6//T3iDvPb/r5FXLKUW3f+/bagspRbd/79tqCylRNf/v5FXLKVE1/+//7/3vFx0////v/e8uej///8/97y56P///z/3vFx0//82rHiDLfr/j/+veIO89v+v/682bLz2/682rDZsLfr/j/8/Nmy56P+//z82bFx0/7//P/e8XHT/v/8/97y56P+//v9ko4qu/7///zZsXHT/v/7/Nmy56P+//79ko4qu/7//vzZsuej/v/+/NmxcdP+//782bFx0VNX/vzZsuehU1f7/Nmy56FTV//82bFx0VNX+/2Sjiq7/v///NmxcdP+//v82bLno/7//v2Sjiq7/v/+/Nmy56P+//782bFx0/7//vzZsXHRU1f+/Nmy56FTV/v82bLnoVNX//zZsXHRU1QAAZKOKrv+/AAA2bLno/78AADZsXHT/v/8/ZKOKrv+//z82bFx0/7//PzZsuej/v/8/Nmy56FTV/z82bFx0VNUAADZsXHRU1QAANmy56FTVAABko4qu/78AADZsuej/vwAANmxcdP+//z9ko4qu/7//PzZsXHT/v/8/Nmy56P+//z82bLnoVNX/PzZsXHRU1QAANmxcdFTVAAA2bLnoVNX/fyX0XHT///8/97xcdP///7/3vFx0////fyX0uegAgP+/97y56ACA/z/3vLnoAID/P/e8uej/v/+/97y56P+//7/3vFx0/7//P/e8XHT/v/9/JfRcdP///z/3vFx0////v/e8XHT///9/JfS56ACA/7/3vLnoAID/P/e8uegAgP8/97y56P+//7/3vLno/7//v/e8XHT/v/8/97xcdP+//39kowAA////PzZsAAD///+/NmwAAP///39ko1x0AID/vzZsXHQAgP8/NmxcdACA/z82bFx0/7//vzZsXHT/v/+/NmwAAP+//z82bAAA/7//f2SjAAD///8/NmwAAP///782bAAA////f2SjXHQAgP+/NmxcdACA/z82bFx0AID/PzZsXHT/v/+/NmxcdP+//782bAAA/7//PzZsAAD/v/+/Nmy56P+//782bFx0/7//v3QbXHT/v/+/dBu56P+//782bLnoAID/v3QbuegAgP+PdBu56ACA/48PXLnoAID/bw9cuegAgP8/Nmy56ACA/z90G7noAID/b3QbuegAgP+/NmxcdP///782bLno////PzZsuej///8/NmxcdP///z90G7no/7//P3QbXHT/v/8/NmxcdP+//z82bLno/7//bw9cuej/v/9vD1wW3f+//290Gxbd/7//b3Qbuej/v/+PdBu56P+//490Gxbd/7//jw9cFt3/v/+PD1y56P+//28PXLno/7//jw9cuej/v/+PD1wW3f+//28PXBbd/79tqCylRNcAgG2o93NE1wCAkVf3c0TXAICRVyylRNcAgP+PD1wW3QCA/490GxbdAID/b3QbFt0AgP9vD1wW3QCA/v8GcwjuMqP/vwZzCO4yo/+/Pa+KrjKj/v89r4quMqP/vwZzCO7/v/+/Nmy56P+//79ko4qu/7//vz2viq7/v/+/BnMMb/+//782bFx0/7/+/z2viq7///+/Pa+Krv///78Gcwxv/////wZzDW////+/NmxcdP////82bFx0/////wZzDW////+/BnMMb/////8Gcw1v/7///zZsXHT/v/7/ZKOKrv+//v89r4qu/7/+/wZzCO7/v/7/Nmy56P+//78GcwjuE53+/wZzCO4Tnf7/Nmy56BOd/782bLnoE50AAAZzDW////8/BnMMb////z89r4qu//8AAD2viq7///8/BnMMb/+//z82bFx0/7//P2Sjiq7/v/8/Pa+Krv+//z8Gcwju/7//PzZsuej/vwAAPa+KrjKj/z89r4quMqP/PwZzCO4yowAABnMI7jKj/z82bLnoE50AADZsuegTnQAABnMI7hOd/z8GcwjuE50AAAZzCO7/vwAANmy56P+/AABko4qu/78AAD2viq7/vwAABnMNb/+/AAA2bFx0/7//PwZzDG///wAABnMNb///AAA2bFx0////PzZsXHT//9bFx8NcdCzH1sXHw7noLMf/f///uegsx/9///9cdCzH1sXHw7noAID/v/e8uegAgP9/JfS56ACA/3///7noAIAoOsfDuegAgP8/97y56ACA/3///1x0LMf/f///uegsxyg6x8O56CzHKDrHw1x0LMf/P/e8uej7xP8/97xcdPvEKDrHw1x0+8QoOsfDuej7xCg6x8NcdP///z/3vFx0////fyX0XHT///9///9cdP//1sXHw1x0////v/e8XHT//9bFx8O56PvE1sXHw1x0+8T/v/e8XHT7xP+/97y56PvE1sUGcwAALMfWxQZzXHQsx/9/Pa9cdCzH/389rwAALMfWxQZzXHQAgP+/NmxcdACA/39ko1x0AID/fz2vXHQAgCg6BnNcdACA/z82bFx0AID/fz2vAAAsx/9/Pa9cdCzHKDoGc1x0LMcoOgZzAAAsx/8/NmxcdPvE/z82bAAA+8QoOgZzAAD7xCg6BnNcdPvEKDoGcwAA////PzZsAAD///9/ZKMAAP///389rwAA///WxQZzAAD///+/NmwAAP//1sUGc1x0+8TWxQZzAAD7xP+/NmwAAPvE/782bFx0+8T/f/+//3//v/9//7//f/+//38AAP9/AAD/fwAA/38AAAAA/38AAP9/AAD/fwAA/3//fwAA/38AAP9/AAD/fwAA/3////9/////f////3////9/////f////3////9///8AAP9/AAD/fwAA/38AAP9//3////9/////f////3////9/////f////3////9/////f/+//3//v/9//7//f/+//3////9/////f////3////9/////f////3////9/////f////3////9/////f///AAD/fwAA/38AAP9/AAD/f/9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3///1VVVFVVVVRVVVVUVVVVVFX/f////3////9/////f////3////9/////f////3////9/////f////3////9///+qKlTVqipU1aoqVNWqKlTV/3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/////f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/////fwAA/3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAAAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AACqqqqqqqqqqqqqqqqqqqqq/3////9/////f////3////9/////f////3////9/////f////3////9/////f///VNWqKlTVqipU1aoqVNWqKv9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9///8AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9//3//v/9//7//f/+//3//vwAA/38AAP9/AAD/fwAA/3//f////3////9/////f////38AAP9/AAD/f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////3////9/////fwAA/38AAP9/AAD/fwAA/3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3////9/////f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/////f////3///wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+//38AAP9/AAD/fwAA/38AAP9/////f////3////9/////fwAA/38AAP9/AAD/f////3////9///+qKlTVqipU1aoqVNWqKlTV/38AAP9/AAD/fwAA/3////9/////f///qipU1aoqVNWqKlTVqipU1f9/////f////3////9/AAD/fwAA/38AAFVVVFVVVVRVVVVUVVVVVFX/f////3////9/////fwAA/38AAP9/AABVVVRVVVVUVVVVVFVVVVRV/3////9/////f////3////9/////f///AAD/fwAA/38AAP9/AAD/f/9/////f////3////9/////f////3///wAA/38AAP9/AAD/fwAA/3//f////3////9/////f////3////9///8AAP9/AAD/fwAA/38AAP9//3////9/////f////3////9/////f///AAD/fwAA/38AAP9/AAD/f/9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9//7//f/+//3//v/9//7//f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9///8AAP9/AAD/fwAA/38AAP9//3////9/////f////3////9/////f////3////9////+//9//v//f/7//3/+//9//3////9/////f////3////9/////f////3+b1/9/m9f/f5vX/3+b18Gi///Bov//waL//8Gi////fwAA/38AAP9/AAD/fwAA/38AAP9/AAAAAP9/AAD/fwAA/38AAP9//3+b1/9/m9f/f5vX/3+b1/9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP7//3/+//9//v//f/7//38AAP9/AAD/fwAA/38AAP9//3////9/////f////3////9/////f///PV3//z1d//89Xf//PV3//2a9sx5mvbMeZr2zHma9sx7/f////3////9/////f////3////9///+ynpjCsp6YwrKemMKynpjCU0mp5FNJqeRTSankU0mp5P9/////f////3////9/////f////3///6lkqzapZKs2qWSrNqlkqzZmvbMeZr2zHma9sx5mvbMe/3////9/////f////3////9/////f///sp6YwrKemMKynpjCsp6YwlNJqeRTSankU0mp5FNJqeT/f////3////9/////f////3////9///+pZKs2qWSrNqlkqzapZKs2")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ml63t")

[sub_resource type="BoxShape3D" id="BoxShape3D_g1joy"]
size = Vector3(2.00119, 1.98395, 2.20645)

[node name="TestBuilding2" type="Node3D"]
script = ExtResource("1_g1joy")

[node name="mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_g4r2k")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000808716, 0.993744, 0.00205994)
shape = SubResource("BoxShape3D_g1joy")

[node name="Ray1" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.936983, 0.104744, 0.862954)
target_position = Vector3(0, -0.12, 0)

[node name="Ray2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.938886, 0.104744, 0.86294)
target_position = Vector3(0, -0.12, 0)

[node name="Ray3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.476168, 0.100212, -1.05541)
target_position = Vector3(0, -0.12, 0)

[node name="Ray4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.479364, 0.100212, -1.05541)
target_position = Vector3(0, -0.12, 0)
